# higo-agent

./: .gcloudignore  .gitignore  README.md  pyproject.toml
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
CODE/: GEMINI.md  Makefile  Procfile  pyproject.toml
CODE/agents/care_tip/memory/: dog_breed_guidelines.json
CODE/agents/discovery/: agent_engine_app.py
CODE/agents/shared/: deploy.py
CODE/notebooks/: evaluating_adk_agent.ipynb
CODE/tests/integration/: test_endpoint.py
CODE/tests/unit/: test_discovery_tools.py
HACKATHON/: README.md  architecture_diagram.md
HIGO/: Mission_Vision_and_Purpose.md  What_is_Higo.md
agents/: __init__.py
agents/care_tip/: __init__.py  agent.py  agent_engine_app.py  run.py
agents/care_tip/memory/: cat_breed_guidelines.json
agents/discovery/: agent.py
agents/discovery/tools/: __init__.py  discovery_tools.py
agents/shared/: __init__.py  telemetry.py  typing.py
deployment/terraform/: build_triggers.tf  variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
notebooks/: adk_app_testing.ipynb
tests/integration/: conftest.py  test_agent.py  test_agent_engine_app.py  test_endpoint.py
tests/unit/: test_discovery_tools.py
